--- a/npactflask/npactflask/templates/start/EntrezSearchForm.html
+++ b/npactflask/npactflask/templates/start/EntrezSearchForm.html
@@ -1,5 +1,4 @@
-{% load media %}
-{% if form.session and form.session.result_count > 0 %}
+{% if sess and sess.result_count > 0 %}
 <table>
   <thead>
     <tr>
@@ -9,11 +8,10 @@
       <th>RefSeqId</th>
   </thead>
   <tbody>
-    {% with form.data.entrez_search_term|urlencode as entrez_search_term %}
-    {% for summary in form.session.summarize %}
+    {% for summary in sess.summarize() %}
     <tr>
       <td>
-        <a href="{% url efetch summary.Id %}?entrez_search_term={{entrez_search_term}}&action={{action}}&email={{email|urlencode}}">
+        <a href="{{ url_for('efetch', id=summary.Id) }}?entrez_search_term={{search|urlencode}}&action={{action}}&email={{email|urlencode}}">
           {{summary.Title}}
         </a>
       </td>
@@ -22,11 +20,9 @@
           {{summary.UpdateDate}}</td>
       <td>
         <a href="http://www.ncbi.nlm.nih.gov/nuccore/{{summary.Caption|urlencode}}">{{summary.Caption}}
-          <!-- <img src="{% media_url "images/ncbi.gif" %}" height="12" width="25"></a> -->
       </td>
     </tr>
     {% endfor %}
-    {% endwith %}
   </tbody>
 </table>
 {% endif %}
