Fix Caching Problems
Updated other pages to have files that will have modified time appended
onto the name so the browser will be forced to check for a new
version. Also added functionality for when not in debug mode so the
dynamic names will be based off of version number instead of time so it
will be slightly faster.

--- a/npactflask/npactflask/templates/base.html
+++ b/npactflask/npactflask/templates/base.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <title>{% block title %}University of Florida Genetics Institute{% endblock title %}</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/basic.css') }}">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/custom-theme/jquery-ui.min.css') }}">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='bower_components/qtip2/jquery.qtip.min.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ vSTATIC('css/basic.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ vSTATIC('css/style.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ vSTATIC('css/custom-theme/jquery-ui.min.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ vSTATIC('bower_components/qtip2/jquery.qtip.min.css') }}">
     
-    <script src="{{ url_for('static', filename='bower_components/jquery/dist/jquery.min.js') }}"></script>
+    <script src="{{ vSTATIC('bower_components/jquery/dist/jquery.min.js') }}"></script>
     {% block addScript %}{% endblock %}
   </head>
   <body ng-app="npact">
